@@ -1,6 +1,6 @@
 /* integration/cquad.c
  * 
- * Copyright (C) 2010 Pedro Gonnet
+ * Copyright (C) 2010 Pedro Gonnet <pedro.gonnet@gmail.com>
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
